# thesis_breath_frequency

./: .gitignore  README.md  calculate_hours.py  main.py  ore_lavorate.csv  ore_lavorate_calcolate.xlsx  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
.github/agents/: ProjectCustomAgent.agent.md
.github/workflows/: main-merge.yaml  type-checking.yaml
data/interim/: breakpoints.json  cleaned_data.csv
data/raw/: Respiratorio CPET BR.xlsx
notebooks/: data_cleaning.ipynb  template.ipynb
report/: references.bib  report.tex
src/thesis_breath_frequency/: __init__.py  project_configs.py  project_logger.py
src/thesis_breath_frequency/cleaning/: __init__.py  _cleaning_utils.py  data_cleaning_function.py
tests/: conftest.py
